添加scrolVie约束页面的控制

--- a/DailyTools/Base.lproj/Main.storyboard
+++ b/DailyTools/Base.lproj/Main.storyboard
@@ -45,7 +45,71 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nDI-kQ-6kE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1761" y="-412"/>
+            <point key="canvasLocation" x="1695" y="-573"/>
+        </scene>
+        <!--Scroll LayoutVC-->
+        <scene sceneID="Tio-be-7OR">
+            <objects>
+                <viewController storyboardIdentifier="SLScrollLayoutVC" id="5Lv-6p-qYd" customClass="SLScrollLayoutVC" customModule="DailyTools" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8az-IF-964"/>
+                        <viewControllerLayoutGuide type="bottom" id="HAC-PI-QTJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gyc-lz-McC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="下面的区域可以滑动" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jts-gH-wQI">
+                                <rect key="frame" x="10" y="30" width="355" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="a1i-6b-MxQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <scrollView clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbp-ZR-gtv">
+                                <rect key="frame" x="0.0" y="100" width="375" height="120"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="展示文字内容" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzy-AL-q5N">
+                                        <rect key="frame" x="10" y="10" width="355" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="E25-Xy-zfB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Pzy-AL-q5N" secondAttribute="trailing" constant="10" id="Blc-DQ-TM9"/>
+                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="top" secondItem="Mbp-ZR-gtv" secondAttribute="top" constant="10" id="E6t-KI-Ddg"/>
+                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="leading" secondItem="Mbp-ZR-gtv" secondAttribute="leading" constant="10" id="Qdh-pn-FYH"/>
+                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="centerX" secondItem="Mbp-ZR-gtv" secondAttribute="centerX" id="W8r-BP-PV2"/>
+                                    <constraint firstAttribute="bottom" secondItem="Pzy-AL-q5N" secondAttribute="bottom" constant="89" id="a7G-R8-Wec"/>
+                                    <constraint firstAttribute="height" constant="120" id="gRw-fv-g1R"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Mbp-ZR-gtv" secondAttribute="trailing" id="0GZ-j0-ds5"/>
+                            <constraint firstAttribute="trailing" secondItem="jts-gH-wQI" secondAttribute="trailing" constant="10" id="6eM-jd-tr4"/>
+                            <constraint firstItem="jts-gH-wQI" firstAttribute="leading" secondItem="gyc-lz-McC" secondAttribute="leading" constant="10" id="DrX-m5-CiE"/>
+                            <constraint firstItem="HAC-PI-QTJ" firstAttribute="top" secondItem="Pzy-AL-q5N" secondAttribute="bottom" constant="536" id="Fcr-bw-Wid"/>
+                            <constraint firstItem="Mbp-ZR-gtv" firstAttribute="leading" secondItem="gyc-lz-McC" secondAttribute="leading" id="GaK-eL-EYA"/>
+                            <constraint firstItem="Mbp-ZR-gtv" firstAttribute="top" secondItem="jts-gH-wQI" secondAttribute="bottom" constant="49" id="T0D-dU-iY4"/>
+                            <constraint firstItem="jts-gH-wQI" firstAttribute="top" secondItem="8az-IF-964" secondAttribute="bottom" constant="10" id="jjO-oV-wxs"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="contentTH" destination="E25-Xy-zfB" id="Vgq-3Y-0C1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tSK-FO-HpI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2454" y="-332"/>
         </scene>
         <!--Web-->
         <scene sceneID="RHW-ek-fTM">
@@ -63,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zzv-3g-qJk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2527" y="-423"/>
+            <point key="canvasLocation" x="2455" y="-975"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Ajw-xO-Kq7">
