针对scrolView添加纵向约束

--- a/DailyTools/Base.lproj/Main.storyboard
+++ b/DailyTools/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -50,7 +51,7 @@
         <!--Scroll LayoutVC-->
         <scene sceneID="Tio-be-7OR">
             <objects>
-                <viewController storyboardIdentifier="SLScrollLayoutVC" id="5Lv-6p-qYd" customClass="SLScrollLayoutVC" customModule="DailyTools" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SLScrollLayoutVC" automaticallyAdjustsScrollViewInsets="NO" id="5Lv-6p-qYd" customClass="SLScrollLayoutVC" customModule="DailyTools" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8az-IF-964"/>
                         <viewControllerLayoutGuide type="bottom" id="HAC-PI-QTJ"/>
@@ -60,56 +61,61 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="下面的区域可以滑动" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jts-gH-wQI">
-                                <rect key="frame" x="10" y="30" width="355" height="21"/>
+                                <rect key="frame" x="10" y="84" width="355" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="a1i-6b-MxQ"/>
+                                    <constraint firstAttribute="height" constant="21" id="mvo-gU-M6R"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbp-ZR-gtv">
-                                <rect key="frame" x="0.0" y="100" width="375" height="120"/>
+                                <rect key="frame" x="0.0" y="114" width="375" height="120"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="展示文字内容" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzy-AL-q5N">
-                                        <rect key="frame" x="10" y="10" width="355" height="21"/>
+                                        <rect key="frame" x="10" y="40" width="355" height="20.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="E25-Xy-zfB"/>
+                                            <constraint firstAttribute="height" constant="20.5" id="ARl-CZ-ZJE"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Pzy-AL-q5N" secondAttribute="trailing" constant="10" id="Blc-DQ-TM9"/>
-                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="top" secondItem="Mbp-ZR-gtv" secondAttribute="top" constant="10" id="E6t-KI-Ddg"/>
-                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="leading" secondItem="Mbp-ZR-gtv" secondAttribute="leading" constant="10" id="Qdh-pn-FYH"/>
-                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="centerX" secondItem="Mbp-ZR-gtv" secondAttribute="centerX" id="W8r-BP-PV2"/>
-                                    <constraint firstAttribute="bottom" secondItem="Pzy-AL-q5N" secondAttribute="bottom" constant="89" id="a7G-R8-Wec"/>
-                                    <constraint firstAttribute="height" constant="120" id="gRw-fv-g1R"/>
+                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="top" secondItem="Mbp-ZR-gtv" secondAttribute="top" constant="40" id="18z-GK-h9n"/>
+                                    <constraint firstAttribute="bottom" secondItem="Pzy-AL-q5N" secondAttribute="bottom" constant="59.5" id="FfA-Rp-ib3"/>
+                                    <constraint firstItem="Pzy-AL-q5N" firstAttribute="leading" secondItem="Mbp-ZR-gtv" secondAttribute="leading" constant="10" id="LgK-X7-AKZ"/>
+                                    <constraint firstAttribute="height" constant="120" id="h8C-H9-zLU"/>
+                                    <constraint firstAttribute="trailing" secondItem="Pzy-AL-q5N" secondAttribute="trailing" constant="10" id="sGA-kI-eqb"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Mbp-ZR-gtv" secondAttribute="trailing" id="0GZ-j0-ds5"/>
-                            <constraint firstAttribute="trailing" secondItem="jts-gH-wQI" secondAttribute="trailing" constant="10" id="6eM-jd-tr4"/>
-                            <constraint firstItem="jts-gH-wQI" firstAttribute="leading" secondItem="gyc-lz-McC" secondAttribute="leading" constant="10" id="DrX-m5-CiE"/>
-                            <constraint firstItem="HAC-PI-QTJ" firstAttribute="top" secondItem="Pzy-AL-q5N" secondAttribute="bottom" constant="536" id="Fcr-bw-Wid"/>
-                            <constraint firstItem="Mbp-ZR-gtv" firstAttribute="leading" secondItem="gyc-lz-McC" secondAttribute="leading" id="GaK-eL-EYA"/>
-                            <constraint firstItem="Mbp-ZR-gtv" firstAttribute="top" secondItem="jts-gH-wQI" secondAttribute="bottom" constant="49" id="T0D-dU-iY4"/>
-                            <constraint firstItem="jts-gH-wQI" firstAttribute="top" secondItem="8az-IF-964" secondAttribute="bottom" constant="10" id="jjO-oV-wxs"/>
+                            <constraint firstAttribute="trailing" secondItem="jts-gH-wQI" secondAttribute="trailing" constant="10" id="1om-ND-gTe"/>
+                            <constraint firstAttribute="trailing" secondItem="Mbp-ZR-gtv" secondAttribute="trailing" id="4dg-fp-Egg"/>
+                            <constraint firstItem="jts-gH-wQI" firstAttribute="leading" secondItem="gyc-lz-McC" secondAttribute="leading" constant="10" id="5Im-42-Cei"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Pzy-AL-q5N" secondAttribute="trailing" constant="-6" id="8se-Mq-f5o"/>
+                            <constraint firstItem="Mbp-ZR-gtv" firstAttribute="top" secondItem="jts-gH-wQI" secondAttribute="bottom" constant="9" id="C59-ar-K39"/>
+                            <constraint firstItem="jts-gH-wQI" firstAttribute="top" secondItem="gyc-lz-McC" secondAttribute="top" constant="84" id="O0g-Yd-BZH"/>
+                            <constraint firstItem="Mbp-ZR-gtv" firstAttribute="leading" secondItem="gyc-lz-McC" secondAttribute="leading" id="gIO-rN-7Fz"/>
+                            <constraint firstItem="Pzy-AL-q5N" firstAttribute="leading" secondItem="gyc-lz-McC" secondAttribute="leadingMargin" constant="-6" id="vG8-ow-MZZ"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                     <connections>
-                        <outlet property="contentTH" destination="E25-Xy-zfB" id="Vgq-3Y-0C1"/>
+                        <outlet property="contentLb" destination="Pzy-AL-q5N" id="PqI-5O-D9X"/>
+                        <outlet property="contentTH" destination="ARl-CZ-ZJE" id="TKW-zd-gDM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tSK-FO-HpI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2454" y="-332"/>
+            <point key="canvasLocation" x="2453.5999999999999" y="-332.38380809595208"/>
         </scene>
         <!--Web-->
         <scene sceneID="RHW-ek-fTM">
