--- a/DailyTools/Base.lproj/Main.storyboard
+++ b/DailyTools/Base.lproj/Main.storyboard
@@ -309,7 +309,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhE-IG-iiK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2719.1999999999998" y="1146.4767616191905"/>
+            <point key="canvasLocation" x="2684" y="1110"/>
         </scene>
         <!--RealmVC-->
         <scene sceneID="ujK-pz-vk9">
@@ -336,7 +336,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F7j-yd-piN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3474" y="1762"/>
+            <point key="canvasLocation" x="1721" y="1814"/>
         </scene>
         <!--Collection View LayoutVC-->
         <scene sceneID="E4q-Hu-48U">
@@ -355,7 +355,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" editingAccessoryType="detailButton" id="7tF-vw-UZ1">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellId" editingAccessoryType="detailButton" id="7tF-vw-UZ1">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7tF-vw-UZ1" id="yXj-GO-mWZ">
@@ -383,7 +383,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wxw-hv-GN9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4396" y="1744"/>
+            <point key="canvasLocation" x="2607" y="1814"/>
         </scene>
         <!--Tags Colors Table View Controller-->
         <scene sceneID="tQ2-py-Dym">
@@ -420,7 +420,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gPn-Pz-Om9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3432.8000000000002" y="1110.4947526236883"/>
+            <point key="canvasLocation" x="3402" y="1061"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6Gf-7Q-oIb">
